# BeHaviorTree_R2.ROS2

./: .gitignore  Learning.md  debug.md  start_all.sh
log/: latest_build  latest_clean
src/BHT_ROS2/camera_stag_bt/src/: ali_pos_node.cpp  register_nodes.cpp
src/BHT_ROS2/move_to_position_bt/: CMakeLists.txt
src/BHT_ROS2/move_to_position_bt/include/move_to_position_bt/: movetp_node.hpp
src/BHT_ROS2/move_to_position_bt/src/: movetp_node.cpp  register_nodes.cpp
src/BHT_ROS2/pose_est_bt/: CMakeLists.txt
src/BHT_ROS2/pose_est_bt/include/pose_est_bt/: pose_solve_node.hpp
src/BHT_ROS2/pose_est_bt/src/: pose_solve_node.cpp  register_nodes.cpp
src/BHT_ROS2/r2_decision/: CMakeLists.txt  package.xml
src/BHT_ROS2/r2_decision/behavior_trees/: ali_sp_test_trees.xml  fetch_sp_test_tree.xml  get_kfs_test.xml
src/BHT_ROS2/r2_decision/config/: bt_executor.yaml
src/BHT_ROS2/r2_decision/launch/: bt_executor.launch.py
src/BHT_ROS2/r2_initial_bt/src/: r2_initial_nodes.cpp  register_nodes.cpp
src/BHT_ROS2/tf_listen_bt/: CMakeLists.txt  package.xml
src/BHT_ROS2/tf_listen_bt/src/: tf_listen.cpp
src/BHT_ROS2/yolo_spearhead_see_bt/: CMakeLists.txt  package.xml
src/BHT_ROS2/yolo_spearhead_see_bt/src/: register_nodes.cpp  yolo_spearhead_see_node.cpp
src/camera_stag/: setup.py
src/camera_stag_bt/: CMakeLists.txt  package.xml
src/camera_stag_bt/src/: ali_pos_node.cpp
src/drivers/librealsense/: package.xml
src/drivers/livox_ros_driver2/src/: CMakeLists.txt
src/drivers/realsense-ros/realsense2_ros_mqtt_bridge/: setup.py
src/drivers/terraced_camera/: package.xml  setup.cfg  setup.py  terraced_camera_usage.md
src/drivers/terraced_camera/terraced_camera/: terraced_camera_node.py
src/interface/stm32_comm/: CMakeLists.txt  package.xml
src/interface/stm32_comm/include/stm32_comm/: action_codes.hpp  common_headers.hpp  serial_manager.hpp  serial_packet.hpp  utils.hpp
src/interface/stm32_comm/launch/: stm32_comm.launch.py
src/interface/stm32_comm/src/: serial_manager.cpp  stm32_comm_node.cpp
src/interface/stm32_control/: CMakeLists.txt  flow_diagram.md  package.xml
src/interface/stm32_control/config/: stm32_control.yaml  stm32_control_GLIM.yaml
src/interface/stm32_control/include/stm32_control/: action_codes.hpp  action_handler.hpp  common_headers.hpp  flow.hpp  serial_packet.hpp  stm32_control_node.hpp  utils.hpp
src/interface/stm32_control/launch/: stm32_control.launch.py  stm32_control_GLIM.launch.py
src/interface/stm32_control/src/: action_handler.cpp  flow_registry.cpp  flows.cpp  stm32_control_node.cpp  stm32_control_node_params.cpp  stm32_control_node_runtime.cpp
src/localization/GLIM/: frames_2025-12-05_13.14.40.gv  imgui.ini
src/localization/Point-LIO/: CMakeLists.txt  README_config.md
src/localization/Point-LIO/config/: airy.yaml  mid360_inner.yaml  mid360_outer.yaml  mid360_renni.yaml  temp.yaml  velody16.yaml  velody16_preprocess.yaml
src/localization/Point-LIO/docs/: RESET_SERVICE_USAGE.md
src/localization/Point-LIO/launch/: point_lio.launch.py
src/localization/Point-LIO/rviz_cfg/: loam_livox.rviz
src/localization/Point-LIO/scripts/: reset_point_lio.sh  test_reset_service.py
src/localization/glim2small_gicp/: CMakeLists.txt  README.MD  package.xml
src/localization/glim2small_gicp/launch/: glim2small_gicp.launch.py
src/localization/glim2small_gicp/src/: glim2small_gicp_node.cpp
src/move_to_position/: CMakeLists.txt  package.xml
src/move_to_position/src/: move_to_position.cpp
src/move_to_position_bt/: package.xml
src/move_to_position_bt/src/: register_nodes.cpp
src/perception/camera_stag/: package.xml  setup.cfg
src/perception/pose_est/: package.xml  requirements.txt  setup.py
src/perception/pose_est/bundlesdf/: nerf_helpers.py  nerf_runner.py  run_nerf.py
src/perception/pose_est/config/: labels.txt  pose.yaml
src/perception/pose_est/launch/: pose_est.launch.py
src/perception/pose_est/learning/datasets/: h5_dataset.py  pose_dataset.py
src/perception/pose_est/learning/models/: network_modules.py  refine_network.py  score_network.py
src/perception/pose_est/learning/training/: predict_pose_refine.py  predict_score.py
src/perception/pose_est/pose_est/: Utils.py  datareader.py  estimater.py  yolo_predict.py  yolo_predict_notrack.py
src/perception/pose_est/training/: predict_pose_refine.py  predict_score.py
src/perception/yolo_spearhead_see/: setup.cfg  setup.py  yolo_spearhead_see_usage.md
src/pose_est_bt/: package.xml
src/pose_est_bt/src/: register_nodes.cpp
src/r2_decision/: CMakeLists.txt  package.xml
src/r2_decision/behavior_trees/: fetch_sp_test_tree.xml
src/r2_decision/config/: bt_executor.yaml
src/r2_decision/launch/: bt_executor.launch.py
src/r2_initial_bt/: CMakeLists.txt  package.xml
src/r2_initial_bt/src/: r2_initial_nodes.cpp  register_nodes.cpp
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/config/: arm.yaml
src/robot_arm/launch/: arm.launch.py
src/robot_arm/src/: robot_arm.cpp
src/services/ali_interface/: CMakeLists.txt  package.xml
src/services/fetchsp_interface/: CMakeLists.txt  package.xml
src/services/foundationpose_interface/: CMakeLists.txt  package.xml
src/services/movetp_interface/: CMakeLists.txt  package.xml
src/services/pose_interface/: CMakeLists.txt  package.xml
src/services/pose_interfaces/: CMakeLists.txt  package.xml
src/tf_listen_bt/src/: register_nodes.cpp  tf_listen.cpp
src/utils/publish_target/: publish_target.py  publish_target_from_delta.py  publish_target_from_delta_pointlio_tf.py  readme.md
src/utils/serial_monitor/: detect_ack2_burst.py  monitor_stm32_packet.py
src/utils/serial_send/: send_align_from_yolo.py  send_align_from_yolo_pointlio_tf.py  send_stm32_packet.py
src/yolo_spearhead_see/: package.xml  setup.py
src/yolo_spearhead_see/yolo_spearhead_see/: yolo_spearhead_see.py
src/yolo_spearhead_see_bt/: CMakeLists.txt  package.xml
src/yolo_spearhead_see_bt/include/yolo_spearhead_see_bt/: yolo_spearhead_see_node.hpp
src/yolo_spearhead_see_bt/src/: register_nodes.cpp  yolo_spearhead_see_node.cpp
(+24 files in other folders)
