<?xml version="1.0"?>
<package format="3">
  <name>pose_est_bt</name>
  <version>0.0.1</version>
  <description>BehaviorTree.CPP ROS2 plugin nodes for pose_est services.</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>foundationpose_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
