<?xml version="1.0"?>
<package format="3">
  <name>r2_decision</name>
  <version>0.0.1</version>
  <description>Behavior tree resources and launch for R2 decision.</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>btcpp_ros2_samples</exec_depend>
  <exec_depend>behaviortree_ros2</exec_depend>
  <exec_depend>camera_stag_bt</exec_depend>
  <exec_depend>move_to_position_bt</exec_depend>
  <exec_depend>pose_est_bt</exec_depend>
  <exec_depend>r2_initial_bt</exec_depend>
  <exec_depend>tf_listen_bt</exec_depend>
  <exec_depend>yolo_spearhead_see_bt</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
